v3 LESS: fix missing margin under some forms
(but still do not show it in RC messages view, e.g.)

--- a/cosinnus/static/less/v3_main_content_patches.less
+++ b/cosinnus/static/less/v3_main_content_patches.less
@@ -1,3 +1,7 @@
+.x-v3-content {
+    margin-bottom: 40px;
+}
+
 .v2-dashboard {
     margin-top: 0;
 }
